--- a/TileNavPane/App.xaml
+++ b/TileNavPane/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="TileNavPane.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TileNavPane"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:TileNavPane">
     <Application.Resources>
          
     </Application.Resources>
