--- a/TileNavPane/MainWindow.xaml
+++ b/TileNavPane/MainWindow.xaml
@@ -1,18 +1,44 @@
 ﻿<Window x:Class="TileNavPane.MainWindow"
-        xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:TileNavPane" 
+        xmlns:view="clr-namespace:TileNavPane.View"
+        
+        xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
         xmlns:dxnav="http://schemas.devexpress.com/winfx/2008/xaml/navigation"
         xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
         xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui"
         xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
         xmlns:dxwuin="http://schemas.devexpress.com/winfx/2008/xaml/windowsui/navigation"
-        xmlns:local="clr-namespace:TileNavPane" 
+       
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525"  WindowState="Maximized" >
-    
+        Title="MainWindow" 
+        Height="350" Width="525"  
+        WindowState="Maximized" >
+
+
+
+    <dxmvvm:Interaction.Behaviors>
+        <dx:DialogService x:Name="OrdenDlg" DialogWindowStartupLocation="CenterOwner">
+            <dx:DialogService.ViewTemplate>
+                <DataTemplate>
+                    <view:Orden />
+                </DataTemplate>
+            </dx:DialogService.ViewTemplate>
+            <dx:DialogService.DialogStyle>
+                <Style TargetType="{x:Type dx:DXDialogWindow}">
+                    <Setter Property="SizeToContent" Value="WidthAndHeight"/>
+                    <!--<Setter Property="WindowStyle" Value="None"/>-->
+                </Style>
+            </dx:DialogService.DialogStyle>
+        </dx:DialogService>
+    </dxmvvm:Interaction.Behaviors>
+
+
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -22,7 +48,7 @@
         <dxnav:TileNavPane x:Name="tileNavPane1" Background="green">
             <dxnav:TileNavPane.NavButtons>
                 <dxnav:NavButton Content=" MENU" AllowGlyphTheming="True" Glyph="{dx:DXImage 'Office2013/Arrows/MoveDown_32x32.png'}" >
-                    <dxnav:TileNavItem Content="Opcion1" Background="green" AllowGlyphTheming="True" TileGlyph="{dx:DXImageGrayscale Image=Pie_32x32.png}" />
+                    <dxnav:TileNavItem Content="Opcion1" Background="green" AllowGlyphTheming="True" TileGlyph="{dx:DXImageGrayscale Image=Pie_32x32.png}" Command="{Binding Abrir}" />
                     <dxnav:TileNavItem Content="Opcion2" Background="red"  AllowGlyphTheming="True" TileGlyph="{dx:DXImage 'Images/Chart/DrillDownOnArguments_Pie_32x32.png'}" />
                     <dxnav:TileNavItem Content="Opcion3"/>
                     <dxnav:TileNavItem Content="Opcion4"/>
