--- a/TileNavPane/View/Orden.xaml
+++ b/TileNavPane/View/Orden.xaml
@@ -10,21 +10,17 @@
              
              xmlns:local="clr-namespace:TileNavPane.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Width="600" Height="500">
+             d:DesignHeight="500" d:DesignWidth="500" Width="500" Height="500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="100"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        
-        <Grid  Height="30" VerticalAlignment="Top" Background="green" >
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="35"/>
-            </Grid.ColumnDefinitions>
 
-            <Button x:Name="btnClose"                      
+        </Grid.RowDefinitions>
+
+
+
+        <!--<Button x:Name="btnClose"                      
                     BorderThickness="0"
                     Content="X"
                     Foreground="White"
@@ -32,14 +28,32 @@
                     FontFamily="Monserrat"
                     Cursor="Hand"                           
                     Grid.Column="2"
-                    />
+                    />-->
+
+
+        <Grid>
+            <Label Content="PRODUCTO:" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Height="23" Width="140" FontWeight="DemiBold"/>
+            <dxe:TextEdit  x:Name="Producto" Margin="0,38,0,144" Height="27"/>
+            <Label Content="CANTIDAD:" HorizontalAlignment="Left" Margin="0,86,0,0" VerticalAlignment="Top" Height="23" Width="140" FontWeight="DemiBold"/>
+            <dxe:TextEdit  x:Name="Producto_" Margin="0,109,374,73" Height="27" />
+
+            <StackPanel  Margin="0,155,0,-135" >
+                <RadioButton Content="Con todo"/>
+                <RadioButton Content="Con todo menos..."/>
+                <dxe:ComboBoxEdit ItemsSource="{Binding listIngredientes}" Height="42" Margin="0,10,0,0">
+                    <dxe:ComboBoxEdit.StyleSettings>
+                        <dxe:TokenComboBoxStyleSettings />
+                    </dxe:ComboBoxEdit.StyleSettings>
+                </dxe:ComboBoxEdit>
+                <Label Content="COMENTARIOS:" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="140" FontWeight="DemiBold" Margin="0,20,0,0"/>
+                <dxe:TextEdit  x:Name="Comentarios" Height="50"/>
+            </StackPanel>
+
+            
+
         </Grid>
 
-        <dxe:ComboBoxEdit ItemsSource="{Binding listIngredientes}">
-            <dxe:ComboBoxEdit.StyleSettings>
-                <dxe:TokenComboBoxStyleSettings />
-            </dxe:ComboBoxEdit.StyleSettings>
-        </dxe:ComboBoxEdit>
+
 
 
     </Grid>
