hata este punto ya se puede navegar por el menu principal y que solamente cambie el row de enmedio del grid

--- a/TileNavPane/MainWindow.xaml
+++ b/TileNavPane/MainWindow.xaml
@@ -48,28 +48,29 @@
         <dxnav:TileNavPane x:Name="tileNavPane1" Background="green">
             <dxnav:TileNavPane.NavButtons>
                 <dxnav:NavButton Content=" MENU" AllowGlyphTheming="True" Glyph="{dx:DXImage 'Office2013/Arrows/MoveDown_32x32.png'}" >
-                    <dxnav:TileNavItem Content="Opcion1" Background="green" AllowGlyphTheming="True" TileGlyph="{dx:DXImageGrayscale Image=Pie_32x32.png}" Command="{Binding Abrir}" />
-                    <dxnav:TileNavItem Content="Opcion2" Background="red"  AllowGlyphTheming="True" TileGlyph="{dx:DXImage 'Images/Chart/DrillDownOnArguments_Pie_32x32.png'}" />
-                    <dxnav:TileNavItem Content="Opcion3"/>
-                    <dxnav:TileNavItem Content="Opcion4"/>
+                    <dxnav:TileNavItem Content="Opcion1" Background="green" AllowGlyphTheming="True" TileGlyph="{dx:DXImageGrayscale Image=Pie_32x32.png}" Command="{Binding Inicio}" />
+                    <dxnav:TileNavItem Content="Opcion2" Background="red" AllowGlyphTheming="True" TileGlyph="{dx:DXImage 'Images/Chart/DrillDownOnArguments_Pie_32x32.png'}" Command="{Binding Abrir}" />
+                    <dxnav:TileNavItem Content="Opcion3" Background="CadetBlue" AllowGlyphTheming="True" TileGlyph="{dx:DXImage 'Images/Chart/DrillDownOnArguments_Pie_32x32.png'}" Command="{Binding Pedidos}"/>
+                    <dxnav:TileNavItem Content="Opcion4" Background="GRAY" AllowGlyphTheming="True" TileGlyph="{dx:DXImage 'Images/Chart/DrillDownOnArguments_Pie_32x32.png'}" />
                 </dxnav:NavButton>
 
-                <dxnav:NavButton Content="Create..." HorizontalAlignment="Right" AllowGlyphTheming="True" Glyph="{dx:DXImageGrayscale Image=Add_32x32.png}">
-                    <dxnav:TileNavItem Content="Staff" />
-                    <dxnav:TileNavItem Content="Client"/>
-                </dxnav:NavButton>
-                    
+                <dxnav:NavButton Content="Create..." HorizontalAlignment="Right" AllowGlyphTheming="True" Glyph="{dx:DXImageGrayscale Image=Add_32x32.png}" Command="{Binding Abrir}"/>
+
+
                 <dxnav:NavButton Content="Settings" GlyphAlignment="Right" Glyph="{dx:DXImageGrayscale Image=Customization_32x32.png}" AllowGlyphTheming="True" HorizontalAlignment="Right"/>
                 <dxnav:NavButton HorizontalAlignment="Right" Glyph="{dx:DXImageGrayscale Image=Cancel_32x32.png}" AllowGlyphTheming="True" />
             </dxnav:TileNavPane.NavButtons>
                          
         </dxnav:TileNavPane>
 
-        <dxwui:NavigationFrame Grid.Row="1" x:Name="frame" BackNavigationMode="Root" AnimationType="SlideHorizontal">
+
+        <ContentControl Grid.Row="1" Content="{Binding CurrentView}"/>
+
+        <!--<dxwui:NavigationFrame Grid.Row="1" x:Name="frame" BackNavigationMode="Root" AnimationType="SlideHorizontal">
             <dxwui:NavigationFrame.Background>
                 <ImageBrush ImageSource="Images/fondo.png"/>
             </dxwui:NavigationFrame.Background>
-        </dxwui:NavigationFrame>
+        </dxwui:NavigationFrame>-->
 
         <dxb:StatusBarControl Grid.Row="2">
             <dxb:BarStaticItem Content="USUARIO LOGUEADO"/>
